--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: ruby
 rvm:
   - 2.0.0
-  - 1.9.3
+  - 1.9.3env:
+env:
+  - DB=postgresql
+script:
+  - RAILS_ENV=test bundle exec rake --trace db:migrate test
+before_script:
+  - psql -c 'create database stm_test' -U postgres
+  - cp config/database.yml.sample config/database.yml
