--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ script:
   - bundle exec rake db:test:prepare
   - bundle exec rspec spec/
 before_script:
-  - psql -c 'create database stm_test' -U pestgres
+  - psql -c 'create database stm_test' -U postgres
   - cp config/database.yml.sample config/database.yml
