--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
 script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
   - bundle exec rake db:test:prepare
-  - bundle exec rspec spec/
+  - bundle exec rake test
 before_script:
   - psql -c 'create database stm_test' -U postgres
   - cp config/database.yml.sample config/database.yml
